Bug 84692 - ODF import error: Unknown property: FontIndependentLineSpacing
Summary: ODF import error: Unknown property: FontIndependentLineSpacing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.4.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard:
Keywords: bisected, regression
: 84733 (view as bug list)
Depends on:
Blocks:
 
Reported: 2014-10-05 19:14 UTC by Andras Timar
Modified: 2015-04-14 21:03 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
bugdoc (9.19 KB, application/vnd.oasis.opendocument.text)
2014-10-05 19:14 UTC, Andras Timar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Andras Timar 2014-10-05 19:14:35 UTC
Created attachment 107370 [details]
bugdoc

Open the attached arrows.odt in Writer (master, 4.4.0.0alpha0). A message box appears:
    Read-Error.
    Error reading file.
On the console, the following is printed:

warn:legacy.osl:31775:1:sw/source/filter/xml/swxml.cxx:268: uno exception caught while importing:
Unknown property: FontIndependentLineSpacing

The file can be opened without problem in 4.3 and earlier versions.
Comment 1 Andras Timar 2014-10-28 15:30:31 UTC
first bad commit:
commit 7d9bb549d498d6beed2c4050c402d09643febdfa
Author: Armin Le Grand <alg@apache.org>
Date:   Mon Jun 2 15:00:50 2014 +0000

    Related: #i124638# Second step of DrawingLayer FillAttributes...
    
    for Writer objects, now added support for Paragraph and PageStyle (including
    Header and Footer) for direct attributes and style attributes
Comment 2 Commit Notification 2014-10-28 16:02:35 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6cee94ba6b224399e5a4a2511df39d3118454c83

fdo#84692 SwXAutoStyleFamily::insertStyle: don't throw on unknown property

It will be available in 4.4.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Michael Stahl (allotropia) 2014-11-10 21:33:39 UTC
*** Bug 84733 has been marked as a duplicate of this bug. ***