fdo#84692 SwXAutoStyleFamily::insertStyle: don't throw on unknown property

Regression from commit 7d9bb549d498d6beed2c4050c402d09643febdfa
(Related: #i124638# Second step of DrawingLayer FillAttributes...,
2014-06-02), the problem was that the new branch (used for paragraphs)
in the method does not tolerate unknown properties (it throws), while
the behavior was just a warning.

Adapt the new branch to the old behavior, so that the document can be
opened again.

Change-Id: I5d849987602fb8aa0cbbda92ce07c050067473b3